# torrent-seeding-architecture

./: .env.engine.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Caddyfile  README.md  ROADMAP.md  docker-compose.engine.yml  docker-compose.multi-engine.media.yml  docker-compose.multi-engine.tls.yml  docker-compose.multi-engine.yml  docker-compose.observability.yml  docker-compose.override.example.yml  docker-compose.override.yml  docker-compose.yml  pytest.ini  ruff.toml
.cursor/rules/: agent-api.mdc  agent-coordinator.mdc  agent-db.mdc  (+5 more)
api/: Dockerfile  README.md  pyproject.toml
api/seeding_api/: __init__.py  alerts.py  arq_util.py  audit.py  auth.py  buildinfo.py  deps.py  docker_ctl.py  engine_client.py  engine_pool.py  logconf.py  main.py  maintenance.py  metrics.py  migrate.py  net_policy.py  restore.py  runtime_snapshot.py  runtime_sync.py  schemas.py  system_stats.py  ws_hub.py  ws_pollers.py  ws_sources.py
api/seeding_api/routers/: audit.py  auth.py  backups.py  components.py  creator.py  engines.py  health.py  jobs.py  quotas.py  session.py  settings.py  stream.py  torrents.py  ws.py
config/: engines.ct400.json
db/: README.md  pyproject.toml
db/alembic/: README.md  env.py
db/alembic/versions/: 20250326_0001_initial_torrents.py  20250608_0002_torrent_engine_id.py  20250615_0003_torrent_label.py  20250617_0004_engines_registry.py  20250618_0005_api_keys.py  20250618_0006_users_sessions.py  20250618_0007_audit_log.py  20250618_0008_engine_limits.py  20250618_0009_label_quotas.py  20250618_0010_migration_jobs.py  20250618_0011_app_settings.py  20250619_0012_torrent_runtime_snapshot.py  20250721_0013_user_avatar.py
db/seeding_db/: __init__.py  config.py  engine_registry.py  models.py  repository.py  session.py  status_from_runtime.py
desktop/: README.md  pyproject.toml
desktop/scripts/: build_windows.ps1
desktop/seeding_desktop/: __init__.py  __main__.py  cli.py  config.py  gui.py  http_util.py
docs/: BOARD.md  CREATOR.md  DEPLOYMENT_STATE.md  ENGINE-LAUNCH-CHECKLIST.md  IMPORT-RTORRENT.md  INTEGRATION.md  MIGRATE-ENGINE-HOST.md  MULTI_ENGINE.md  OBSERVABILITY.md  PHASE3_LOAD_TEST.md  PLAN_BY_AGENT.md  QA_MANUAL_CHECKLIST.md  REMOTE-ENGINE.md  TLS-AND-AUTH.md
engine/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
engine/seeding_engine/: __init__.py  __main__.py  creator.py  fastresume_io.py  internal_api.py  main.py  store.py  sysinfo.py  torrent_runtime.py
observability/: alerts.yml  prometheus.yml
queue/: Dockerfile  README.md  pyproject.toml
queue/seeding_queue/: __init__.py  engine_util.py  logconf.py  worker.py
scripts/: backup.sh  db-backup.sh  db-restore.sh  deploy-ct400.sh  deploy-engine.sh  dev.ps1  dev.sh  disk-guard.sh  gen-certs.sh  lt_flags_check.py  phase3_baseline.sh  phase3_bulk_import.sh
tests/: conftest.py  test_api_restore.py  test_api_torrents.py  test_compose_integration.py  test_creator.py  test_delete_flags.py  test_engine_app.py  test_engine_registry.py  test_fastresume_io.py  test_queue_sync.py  test_repository.py  test_status_from_runtime.py  test_ws_hub.py
web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+18 files in other folders)
