[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "seeding-api"
version = "0.1.0"
description = "FastAPI control plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "arq>=0.26",
  "python-multipart>=0.0.9",
  "seeding-db",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["seeding_api*"]
