[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "seeding-db"
version = "0.1.0"
description = "Shared database models and migrations for torrent seeding platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy[asyncio]>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "aiosqlite>=0.20", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["seeding_db*"]
