[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "seeding-desktop"
version = "0.1.0"
description = "Desktop client (CLI + GUI) for seeding API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
build = ["pyinstaller>=6.6"]
gui = ["PySide6>=6.7"]

[project.scripts]
seeding-desktop = "seeding_desktop.cli:main"
seeding-desktop-gui = "seeding_desktop.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["seeding_desktop*"]
