[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "seeding-engine"
version = "0.1.0"
description = "libtorrent seeding process (HTTP control plane)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["seeding_engine*"]
