[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "seeding-queue"
version = "0.1.0"
description = "ARQ workers for background jobs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "arq>=0.26",
  "httpx>=0.27",
  "redis>=5",
  "seeding-db",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["seeding_queue*"]
